static/Styles/navbarStyle.css
.custom-navbar {
  background-color: white;
  border-bottom: 1px solid #77BC1F;
}

.custom-link {
  border: 1px solid green;
  border-radius: 5px;
  background-color: #77BC1F;
  margin: 10px;
}

.custom-link:hover {
  color: darkorange;
  opacity: 50%;
}

  .bd-placeholder-img {
    font-size: 1.125rem;
    text-anchor: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
  }

  @media (min-width: 768px) {
    .bd-placeholder-img-lg {
      font-size: 3.5rem;
    }
  }

